# vgi-pe

./: CLAUDE.md  Makefile  README.md  conftest.py  pe_worker.py  pyproject.toml
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
test/sql/: extractors.test  format.test  hostile.test
test/sql/data/: hello_elf  hello_macho
tests/: fixtures.py  test_core.py  test_scalars.py  test_tables.py
vgi_pe/: __init__.py  core.py  meta.py  scalars.py  schema_utils.py  tables.py
