[project]
name = "vgi-pe"
version = "0.1.0"
description = "Static analysis of executable binaries (PE/ELF/Mach-O) for DuckDB via VGI — malware triage"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "pe",
    "elf",
    "mach-o",
    "malware",
    "triage",
    "lief",
    "imphash",
    "entropy",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python",
    "lief>=0.15",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
]

[tool.uv.sources]
# Develop against the local vgi-python checkout (sibling directory). Drop or
# override this block to resolve vgi-python from an index instead.
vgi-python = { path = "../vgi-python" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_pe"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
