[project]
name = "vgi-pe"
version = "0.1.0"
description = "Static analysis of executable binaries (PE/ELF/Mach-O) for DuckDB via VGI — malware triage"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "pe",
    "elf",
    "mach-o",
    "malware",
    "triage",
    "lief",
    "imphash",
    "entropy",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python[http]>=0.8.4",
    "lief>=0.15",
    "pyarrow",
]

[project.optional-dependencies]
# HTTP transport: the worker can serve over HTTP (`pe_worker.py --http`) in
# addition to stdio. That path needs vgi-python's `http` extra (waitress). CI's
# http transport leg installs this via `uv sync --extra http`. (The main
# dependency already pins `vgi-python[http]`, so a plain sync also pulls it; this
# explicit extra keeps the `--extra http` install knob the CI job uses.)
http = [
    "vgi-python[http]>=0.8.4",
]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "pydoclint",
]

# vgi-lint catalog-metadata linter config. Auto-discovered (cwd upward) by both
# the local `vgi-lint` run and the CI `Query-farm/vgi-lint-check@v1` action.
[tool.vgi-lint-check]
# `strings` is the one table function that pairs a positional binary argument
# with a named one (`min_len :=`), AND it is registered twice (the VARCHAR-path
# and BLOB-bytes overloads share the `strings` name — the worker's deliberate
# path/bytes overload idiom, see CLAUDE.md). DuckDB cannot surface a positional
# argument's name for an *overloaded* table function that also has named args, so
# `duckdb_functions()` reports the binary arg as the placeholder `col0` and
# VGI305 fires. The argument IS named (`binary`) in the worker metadata; this is
# purely a DuckDB reporting limitation for overloaded table functions, so VGI305
# is suppressed for this object only. (Single-signature table functions surface
# the name fine — e.g. the sibling `vgi-calendar` `rrule`.)
[tool.vgi-lint-check.per_object."pe.main.strings"]
ignore = ["VGI305"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_pe"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["lief.*"]
ignore_missing_imports = true
